Make sidenav sticky (not fixed), add scrollbar gutter

--- a/code/css/side-nav.css
+++ b/code/css/side-nav.css
@@ -15,10 +15,11 @@ Styles for the side navigation bar.
     padding: 0 0 1em;
     box-sizing: border-box;
 
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     overflow-y: hidden;
+    scrollbar-gutter: auto;
 
     display: grid;
     grid-template-rows: auto auto auto 1fr auto;
@@ -26,7 +27,7 @@ Styles for the side navigation bar.
 }
 #side-nav:hover{
     overflow-y: auto;
-    scrollbar-color: var(--background-primary) var(--accent-hover);
+    scrollbar-color: var(--background-primary) var(--accent-primary);
 }
 
 #logo-container {
